--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-
+    implementation libs.recyclerview
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
@@ -37,4 +37,5 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
 }
