--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation libs.glide
     implementation libs.retrofit
     implementation libs.converter.gson
     implementation libs.recyclerview
