--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,8 @@ android {
 }
 
 dependencies {
-    implementation libs.glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
     implementation libs.retrofit
     implementation libs.converter.gson
     implementation libs.recyclerview
