--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         android:theme="@style/Theme.MobileApp"
         tools:targetApi="31">
 
+        <activity android:name=".PlayerProfileActivity" android:exported="false" />
+
         <activity
             android:name=".CricketPlayers"
             android:exported="false" />
