--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,12 @@
 
         <activity android:name=".PlayerProfileActivity" android:exported="false" />
 
-        <activity
+        <!--<activity
             android:name=".CricketPlayers"
             android:exported="false" />
         <activity
-            android:name=".Statistics"
-            android:exported="false" />
+            android:name=".Matches"
+            android:exported="false" />-->
         <activity
             android:name=".MainActivity"
             android:exported="true">
